# bSafe

./: .gitignore  docker-compose.yaml
charger_fw/: sdkconfig
charger_fw/src/: CMakeLists.txt  app.c  app.h  config.h  idf_component.yml  main.c  mitm_temp.c  mitm_temp.h  nvs_settings.c  nvs_settings.h  wifi_sink.c  wifi_sink.h
charger_fw/src/drivers/: bq25895.c  bq25895.h
hardware/: multi-input-v2.kicad_sch
hardware/bSafe-charger-block/: bSafe-charger-block-B_Cu.gbr  bSafe-charger-block-B_Mask.gbr  bSafe-charger-block-B_Paste.gbr  bSafe-charger-block-B_Silkscreen.gbr  bSafe-charger-block-Edge_Cuts.gbr  bSafe-charger-block-F_Cu.gbr  bSafe-charger-block-F_Mask.gbr  bSafe-charger-block-F_Paste.gbr  bSafe-charger-block-F_Silkscreen.gbr  bSafe-charger-block-In1_Cu.gbr  bSafe-charger-block-In2_Cu.gbr  bSafe-charger-block-NPTH-drl_map.gbr  bSafe-charger-block-NPTH.drl  bSafe-charger-block-PTH-drl_map.gbr  bSafe-charger-block-PTH.drl  bSafe-charger-block-job.gbrjob  bSafe-charger-block.kicad_pcb  bSafe-charger-block.kicad_prl  bSafe-charger-block.kicad_pro  bSafe-charger-block.kicad_sch  battery.kicad_sch  charge.kicad_sch  config.kicad_sch  discharge.kicad_sch  fp-info-cache  fp-lib-table  inout.kicad_sch  interface.kicad_sch  logic.kicad_sch  supply.kicad_sch  sym-lib-table  thermal.kicad_sch  ~bSafe-charger-block.kicad_sch.lck
server/: Dockerfile  app.py  bsafe.service  bsafe_frames.py  bsafe_host.py  bsafe_wifi_host.py  db.py  engine.py  index.html  install.sh  mdns_discovery.py  network_blueprint.py  network_manager.py  parser.py  requirements.txt  sim_blueprint.py
(+22 files in other folders)
